--- a/windows/settings.json
+++ b/windows/settings.json
@@ -17,6 +17,7 @@
                 "cursorHeight": 25,
                 "cursorShape": "vintage",
                 "elevate": true,
+                "experimental.retroTerminalEffect": false,
                 "font": 
                 {
                     "face": "Hack Nerd Font",
@@ -24,8 +25,11 @@
                 },
                 "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
                 "hidden": false,
+                "intenseTextStyle": "all",
                 "name": "PowerShell",
-                "opacity": 40,
+                "opacity": 10,
+                "padding": "0",
+                "scrollbarState": "hidden",
                 "source": "Windows.Terminal.PowershellCore",
                 "useAcrylic": true
             },
