[StyleCop] added lint maintanability rules

--- a/lints/csharp/.editorconfig
+++ b/lints/csharp/.editorconfig
@@ -103,3 +103,13 @@ dotnet_diagnostic.SA1517.severity = error
 dotnet_diagnostic.SA1518.severity = error
 dotnet_diagnostic.SA1519.severity = error
 dotnet_diagnostic.SA1520.severity = error
+dotnet_diagnostic.SA1119.severity = error
+dotnet_diagnostic.SA1400.severity = error
+dotnet_diagnostic.SA1401.severity = error
+dotnet_diagnostic.SA1403.severity = error
+dotnet_diagnostic.SA1404.severity = error
+dotnet_diagnostic.SA1407.severity = error
+dotnet_diagnostic.SA1408.severity = error
+dotnet_diagnostic.SA1410.severity = suggestion
+dotnet_diagnostic.SA1411.severity = error
+dotnet_diagnostic.SA1402.severity = suggestion
