[StyleCop] added lint naming rules

--- a/lints/csharp/.editorconfig
+++ b/lints/csharp/.editorconfig
@@ -113,3 +113,19 @@ dotnet_diagnostic.SA1408.severity = error
 dotnet_diagnostic.SA1410.severity = suggestion
 dotnet_diagnostic.SA1411.severity = error
 dotnet_diagnostic.SA1402.severity = suggestion
+dotnet_diagnostic.SA1300.severity = error
+dotnet_diagnostic.SA1302.severity = error
+dotnet_diagnostic.SA1303.severity = error
+dotnet_diagnostic.SA1304.severity = error
+dotnet_diagnostic.SA1305.severity = error
+dotnet_diagnostic.SA1306.severity = error
+dotnet_diagnostic.SA1307.severity = error
+dotnet_diagnostic.SA1308.severity = error
+dotnet_diagnostic.SA1309.severity = silent
+dotnet_diagnostic.SA1310.severity = error
+dotnet_diagnostic.SA1312.severity = error
+dotnet_diagnostic.SA1313.severity = error
+dotnet_diagnostic.SA1314.severity = error
+dotnet_diagnostic.SX1309.severity = error
+dotnet_diagnostic.SX1309S.severity = error
+dotnet_diagnostic.SA1311.severity = error
