--- a/lints/csharp/.editorconfig
+++ b/lints/csharp/.editorconfig
@@ -129,3 +129,19 @@ dotnet_diagnostic.SA1314.severity = error
 dotnet_diagnostic.SX1309.severity = error
 dotnet_diagnostic.SX1309S.severity = error
 dotnet_diagnostic.SA1311.severity = error
+dotnet_diagnostic.SA1200.severity = silent
+dotnet_diagnostic.SA1201.severity = error
+dotnet_diagnostic.SA1202.severity = error
+dotnet_diagnostic.SA1203.severity = error
+dotnet_diagnostic.SA1204.severity = error
+dotnet_diagnostic.SA1205.severity = error
+dotnet_diagnostic.SA1206.severity = error
+dotnet_diagnostic.SA1208.severity = silent
+dotnet_diagnostic.SA1209.severity = error
+dotnet_diagnostic.SA1210.severity = error
+dotnet_diagnostic.SA1211.severity = error
+dotnet_diagnostic.SA1212.severity = error
+dotnet_diagnostic.SA1213.severity = error
+dotnet_diagnostic.SA1214.severity = error
+dotnet_diagnostic.SA1216.severity = error
+dotnet_diagnostic.SA1217.severity = error
