[SonarLint] added lint rules

--- a/lints/csharp/.editorconfig
+++ b/lints/csharp/.editorconfig
@@ -101,6 +101,8 @@ dotnet_style_qualification_for_field = false:suggestion
 dotnet_style_qualification_for_property = false:suggestion
 dotnet_style_qualification_for_method = false:suggestion
 dotnet_style_qualification_for_event = false:suggestion
+dotnet_diagnostic.CA1827.severity = error
+dotnet_diagnostic.CA1828.severity = error
 
 [*.cs]
 csharp_indent_labels = one_less_than_current
@@ -325,5 +327,62 @@ dotnet_diagnostic.CS8321.severity = error
 dotnet_diagnostic.CS0169.severity = error
 dotnet_diagnostic.CS0414.severity = error
 
-csharp_style_unused_value_assignment_preference = discard_variable
-dotnet_diagnostic.IDE0059.severity = error
+dotnet_diagnostic.S1481.severity = error
+dotnet_diagnostic.S2699.severity = error
+dotnet_diagnostic.S1163.severity = error
+dotnet_diagnostic.S1186.severity = error
+dotnet_diagnostic.S1994.severity = error
+dotnet_diagnostic.S1067.severity = error
+dotnet_diagnostic.S1006.severity = error
+dotnet_diagnostic.S121.severity = error
+dotnet_diagnostic.S131.severity = error
+dotnet_diagnostic.S134.severity = error
+dotnet_diagnostic.S1541.severity = error
+dotnet_diagnostic.S1821.severity = error
+dotnet_diagnostic.S1944.severity = error
+dotnet_diagnostic.S2223.severity = error
+dotnet_diagnostic.S3776.severity = error
+dotnet_diagnostic.S3871.severity = error
+dotnet_diagnostic.S3972.severity = error
+dotnet_diagnostic.S3973.severity = error
+dotnet_diagnostic.S4487.severity = error
+dotnet_diagnostic.S927.severity = error
+dotnet_diagnostic.S3168.severity = error
+dotnet_diagnostic.S103.severity = error
+dotnet_diagnostic.S107.severity = error
+dotnet_diagnostic.S108.severity = error
+dotnet_diagnostic.S109.severity = error
+dotnet_diagnostic.S1110.severity = error
+dotnet_diagnostic.S1123.severity = error
+dotnet_diagnostic.S1144.severity = error
+dotnet_diagnostic.S1172.severity = error
+dotnet_diagnostic.S122.severity = error
+dotnet_diagnostic.S1854.severity = error
+dotnet_diagnostic.S1871.severity = error
+dotnet_diagnostic.S2357.severity = error
+dotnet_diagnostic.S2326.severity = error
+dotnet_diagnostic.S2681.severity = error
+dotnet_diagnostic.S2933.severity = error
+dotnet_diagnostic.S3358.severity = error
+dotnet_diagnostic.S3898.severity = error
+dotnet_diagnostic.S4035.severity = error
+dotnet_diagnostic.S4144.severity = error
+dotnet_diagnostic.S4581.severity = error
+dotnet_diagnostic.S100.severity = error
+dotnet_diagnostic.S101.severity = error
+dotnet_diagnostic.S1075.severity = error
+dotnet_diagnostic.S1104.severity = error
+dotnet_diagnostic.S1109.severity = error
+dotnet_diagnostic.S1116.severity = error
+dotnet_diagnostic.S1125.severity = error
+dotnet_diagnostic.S1128.severity = error
+dotnet_diagnostic.S1155.severity = error
+dotnet_diagnostic.S1450.severity = error
+dotnet_diagnostic.S1643.severity = error
+dotnet_diagnostic.S1659.severity = error
+dotnet_diagnostic.S2156.severity = error
+dotnet_diagnostic.S2737.severity = error
+dotnet_diagnostic.S3235.severity = error
+dotnet_diagnostic.S3240.severity = error
+dotnet_diagnostic.S3256.severity = error
+dotnet_diagnostic.S4225.severity = error
