--- a/terminal/windows/settings.json
+++ b/terminal/windows/settings.json
@@ -3,7 +3,7 @@
     "$schema": "https://aka.ms/terminal-profiles-schema",
     "actions": [],
     "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
-    "launchMode": "default",
+    "launchMode": "maximized",
     "profiles": {
         "defaults": {
             "colorScheme": "One Half Dark",
@@ -21,7 +21,7 @@
                 "font": 
                 {
                     "face": "Hack Nerd Font",
-                    "size": 11
+                    "size": 10
                 },
                 "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
                 "hidden": false,
