--- a/lints/csharp/.editorconfig
+++ b/lints/csharp/.editorconfig
@@ -4,15 +4,15 @@
 
 # Naming rules
 
-dotnet_naming_rule.interface_should_be_begins_with_i.severity = error
+dotnet_naming_rule.interface_should_be_begins_with_i.severity = suggestion
 dotnet_naming_rule.interface_should_be_begins_with_i.symbols = interface
 dotnet_naming_rule.interface_should_be_begins_with_i.style = begins_with_i
 
-dotnet_naming_rule.types_should_be_pascal_case.severity = error
+dotnet_naming_rule.types_should_be_pascal_case.severity = suggestion
 dotnet_naming_rule.types_should_be_pascal_case.symbols = types
 dotnet_naming_rule.types_should_be_pascal_case.style = pascal_case
 
-dotnet_naming_rule.non_field_members_should_be_pascal_case.severity = error
+dotnet_naming_rule.non_field_members_should_be_pascal_case.severity = suggestion
 dotnet_naming_rule.non_field_members_should_be_pascal_case.symbols = non_field_members
 dotnet_naming_rule.non_field_members_should_be_pascal_case.style = pascal_case
 
@@ -65,44 +65,6 @@ dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
 dotnet_style_prefer_compound_assignment = true:suggestion
 dotnet_style_prefer_simplified_interpolation = true:suggestion
 dotnet_style_namespace_match_folder = true:suggestion
-dotnet_diagnostic.CA1012.severity = error
-dotnet_diagnostic.CA1040.severity = silent
-dotnet_diagnostic.CA1041.severity = error
-dotnet_diagnostic.CA1050.severity = error
-dotnet_diagnostic.CA1051.severity = error
-dotnet_diagnostic.CA1063.severity = error
-dotnet_diagnostic.CA1068.severity = error
-dotnet_diagnostic.CA1069.severity = error
-dotnet_diagnostic.CA1064.severity = error
-dotnet_diagnostic.CA1065.severity = error
-dotnet_diagnostic.CA1067.severity = error
-dotnet_diagnostic.CA1066.severity = error
-dotnet_diagnostic.CA1502.severity = error
-dotnet_diagnostic.CA1505.severity = error
-dotnet_diagnostic.CA1506.severity = error
-dotnet_diagnostic.CA1508.severity = error
-dotnet_diagnostic.CA1707.severity = error
-dotnet_diagnostic.CA1725.severity = error
-dotnet_diagnostic.CA2200.severity = error
-dotnet_diagnostic.CA2211.severity = error
-dotnet_diagnostic.CA2250.severity = error
-dotnet_style_readonly_field = true:suggestion
-dotnet_style_predefined_type_for_member_access = true:silent
-dotnet_style_predefined_type_for_locals_parameters_members = true:silent
-dotnet_style_require_accessibility_modifiers = for_non_interface_members:silent
-dotnet_style_allow_statement_immediately_after_block_experimental = true:silent
-dotnet_style_allow_multiple_blank_lines_experimental = true:silent
-dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity:error
-dotnet_code_quality_unused_parameters = all:error
-dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:error
-dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:error
-dotnet_style_parentheses_in_other_operators = never_if_unnecessary:error
-dotnet_style_qualification_for_field = false:suggestion
-dotnet_style_qualification_for_property = false:suggestion
-dotnet_style_qualification_for_method = false:suggestion
-dotnet_style_qualification_for_event = false:suggestion
-dotnet_diagnostic.CA1827.severity = error
-dotnet_diagnostic.CA1828.severity = error
 
 [*.cs]
 csharp_indent_labels = one_less_than_current
@@ -120,6 +82,10 @@ csharp_style_expression_bodied_indexers = true:silent
 csharp_style_expression_bodied_accessors = true:silent
 csharp_style_expression_bodied_lambdas = true:silent
 csharp_style_expression_bodied_local_functions = false:silent
+csharp_style_throw_expression = true:suggestion
+
+# Stylecop
+#   Layout rules
 dotnet_diagnostic.SA1500.severity = error
 dotnet_diagnostic.SA1501.severity = error
 dotnet_diagnostic.SA1502.severity = error
@@ -134,23 +100,13 @@ dotnet_diagnostic.SA1510.severity = error
 dotnet_diagnostic.SA1511.severity = error
 dotnet_diagnostic.SA1512.severity = error
 dotnet_diagnostic.SA1513.severity = error
-dotnet_diagnostic.SA1514.severity = error
-dotnet_diagnostic.SA1515.severity = error
 dotnet_diagnostic.SA1516.severity = error
 dotnet_diagnostic.SA1517.severity = error
 dotnet_diagnostic.SA1518.severity = error
 dotnet_diagnostic.SA1519.severity = error
 dotnet_diagnostic.SA1520.severity = error
-dotnet_diagnostic.SA1119.severity = error
-dotnet_diagnostic.SA1400.severity = error
-dotnet_diagnostic.SA1401.severity = error
-dotnet_diagnostic.SA1403.severity = error
-dotnet_diagnostic.SA1404.severity = error
-dotnet_diagnostic.SA1407.severity = error
-dotnet_diagnostic.SA1408.severity = error
-dotnet_diagnostic.SA1410.severity = suggestion
-dotnet_diagnostic.SA1411.severity = error
-dotnet_diagnostic.SA1402.severity = suggestion
+
+#   Naming rules
 dotnet_diagnostic.SA1300.severity = error
 dotnet_diagnostic.SA1302.severity = error
 dotnet_diagnostic.SA1303.severity = error
@@ -159,14 +115,31 @@ dotnet_diagnostic.SA1305.severity = error
 dotnet_diagnostic.SA1306.severity = error
 dotnet_diagnostic.SA1307.severity = error
 dotnet_diagnostic.SA1308.severity = error
-dotnet_diagnostic.SA1309.severity = silent
 dotnet_diagnostic.SA1310.severity = error
+dotnet_diagnostic.SA1309.severity = silent
 dotnet_diagnostic.SA1312.severity = error
 dotnet_diagnostic.SA1313.severity = error
 dotnet_diagnostic.SA1314.severity = error
 dotnet_diagnostic.SX1309.severity = error
 dotnet_diagnostic.SX1309S.severity = error
-dotnet_diagnostic.SA1311.severity = error
+
+#   Maintainability rules
+dotnet_diagnostic.SA1400.severity = error
+dotnet_diagnostic.SA1401.severity = error
+dotnet_diagnostic.SA1402.severity = suggestion
+dotnet_diagnostic.SA1403.severity = error
+dotnet_diagnostic.SA1404.severity = error
+dotnet_diagnostic.SA1405.severity = error
+dotnet_diagnostic.SA1406.severity = error
+dotnet_diagnostic.SA1407.severity = error
+dotnet_diagnostic.SA1408.severity = error
+dotnet_diagnostic.SA1410.severity = error
+dotnet_diagnostic.SA1411.severity = error
+dotnet_diagnostic.SA1412.severity = error
+dotnet_diagnostic.SA1119.severity = error
+dotnet_diagnostic.SA1413.severity = error
+
+#   Ordering rules
 dotnet_diagnostic.SA1200.severity = silent
 dotnet_diagnostic.SA1201.severity = error
 dotnet_diagnostic.SA1202.severity = error
@@ -174,6 +147,7 @@ dotnet_diagnostic.SA1203.severity = error
 dotnet_diagnostic.SA1204.severity = error
 dotnet_diagnostic.SA1205.severity = error
 dotnet_diagnostic.SA1206.severity = error
+dotnet_diagnostic.SA1207.severity = error
 dotnet_diagnostic.SA1208.severity = silent
 dotnet_diagnostic.SA1209.severity = error
 dotnet_diagnostic.SA1210.severity = error
@@ -183,206 +157,3 @@ dotnet_diagnostic.SA1213.severity = error
 dotnet_diagnostic.SA1214.severity = error
 dotnet_diagnostic.SA1216.severity = error
 dotnet_diagnostic.SA1217.severity = error
-dotnet_diagnostic.SA1100.severity = error
-dotnet_diagnostic.SA1101.severity = silent
-dotnet_diagnostic.SA1102.severity = error
-dotnet_diagnostic.SA1103.severity = error
-dotnet_diagnostic.SA1104.severity = error
-dotnet_diagnostic.SA1105.severity = error
-dotnet_diagnostic.SA1106.severity = error
-dotnet_diagnostic.SA1107.severity = error
-dotnet_diagnostic.SA1108.severity = error
-dotnet_diagnostic.SA1110.severity = error
-dotnet_diagnostic.SA1111.severity = silent
-dotnet_diagnostic.SA1112.severity = silent
-dotnet_diagnostic.SA1113.severity = error
-dotnet_diagnostic.SA1114.severity = error
-dotnet_diagnostic.SA1115.severity = error
-dotnet_diagnostic.SA1116.severity = error
-dotnet_diagnostic.SA1117.severity = error
-dotnet_diagnostic.SA1118.severity = error
-dotnet_diagnostic.SA1120.severity = error
-dotnet_diagnostic.SA1121.severity = error
-dotnet_diagnostic.SA1122.severity = error
-dotnet_diagnostic.SA1123.severity = silent
-dotnet_diagnostic.SA1124.severity = silent
-dotnet_diagnostic.SA1125.severity = error
-dotnet_diagnostic.SA1127.severity = error
-dotnet_diagnostic.SA1128.severity = error
-dotnet_diagnostic.SA1129.severity = error
-dotnet_diagnostic.SA1130.severity = error
-dotnet_diagnostic.SA1131.severity = error
-dotnet_diagnostic.SA1132.severity = error
-dotnet_diagnostic.SA1133.severity = error
-dotnet_diagnostic.SA1134.severity = error
-dotnet_diagnostic.SA1135.severity = error
-dotnet_diagnostic.SA1136.severity = error
-dotnet_diagnostic.SA1137.severity = error
-dotnet_diagnostic.SA1139.severity = error
-dotnet_diagnostic.SA1413.severity = error
-dotnet_diagnostic.SX1101.severity = error
-dotnet_diagnostic.SA1000.severity = error
-dotnet_diagnostic.SA1001.severity = error
-dotnet_diagnostic.SA1002.severity = error
-dotnet_diagnostic.SA1003.severity = error
-dotnet_diagnostic.SA1004.severity = error
-dotnet_diagnostic.SA1005.severity = error
-dotnet_diagnostic.SA1006.severity = error
-dotnet_diagnostic.SA1007.severity = error
-dotnet_diagnostic.SA1008.severity = error
-dotnet_diagnostic.SA1009.severity = error
-dotnet_diagnostic.SA1010.severity = error
-dotnet_diagnostic.SA1011.severity = error
-dotnet_diagnostic.SA1012.severity = error
-dotnet_diagnostic.SA1013.severity = error
-dotnet_diagnostic.SA1014.severity = error
-dotnet_diagnostic.SA1015.severity = error
-dotnet_diagnostic.SA1016.severity = error
-dotnet_diagnostic.SA1017.severity = error
-dotnet_diagnostic.SA1018.severity = error
-dotnet_diagnostic.SA1019.severity = error
-dotnet_diagnostic.SA1020.severity = error
-dotnet_diagnostic.SA1021.severity = error
-dotnet_diagnostic.SA1022.severity = error
-dotnet_diagnostic.SA1023.severity = error
-dotnet_diagnostic.SA1024.severity = error
-dotnet_diagnostic.SA1025.severity = error
-dotnet_diagnostic.SA1026.severity = error
-dotnet_diagnostic.SA1027.severity = error
-dotnet_diagnostic.SA1028.severity = error
-dotnet_diagnostic.SA1651.severity = silent
-dotnet_diagnostic.SA1649.severity = silent
-dotnet_diagnostic.SA1648.severity = silent
-dotnet_diagnostic.SA1642.severity = silent
-dotnet_diagnostic.SA1643.severity = silent
-dotnet_diagnostic.SA1641.severity = silent
-dotnet_diagnostic.SA1640.severity = silent
-dotnet_diagnostic.SA1639.severity = silent
-dotnet_diagnostic.SA1638.severity = silent
-dotnet_diagnostic.SA1637.severity = silent
-dotnet_diagnostic.SA1636.severity = silent
-dotnet_diagnostic.SA1635.severity = silent
-dotnet_diagnostic.SA1634.severity = silent
-dotnet_diagnostic.SA1633.severity = silent
-dotnet_diagnostic.SA1629.severity = silent
-dotnet_diagnostic.SA1627.severity = silent
-dotnet_diagnostic.SA1626.severity = silent
-dotnet_diagnostic.SA1625.severity = silent
-dotnet_diagnostic.SA1624.severity = silent
-dotnet_diagnostic.SA1623.severity = silent
-dotnet_diagnostic.SA1622.severity = silent
-dotnet_diagnostic.SA1621.severity = silent
-dotnet_diagnostic.SA1620.severity = silent
-dotnet_diagnostic.SA1619.severity = silent
-dotnet_diagnostic.SA1618.severity = silent
-dotnet_diagnostic.SA1617.severity = silent
-dotnet_diagnostic.SA1616.severity = silent
-dotnet_diagnostic.SA1615.severity = silent
-dotnet_diagnostic.SA1614.severity = silent
-dotnet_diagnostic.SA1613.severity = silent
-dotnet_diagnostic.SA1612.severity = silent
-dotnet_diagnostic.SA1611.severity = silent
-dotnet_diagnostic.SA1610.severity = silent
-dotnet_diagnostic.SA1609.severity = silent
-dotnet_diagnostic.SA1608.severity = silent
-dotnet_diagnostic.SA1607.severity = silent
-dotnet_diagnostic.SA1606.severity = silent
-dotnet_diagnostic.SA1605.severity = silent
-dotnet_diagnostic.SA1604.severity = silent
-dotnet_diagnostic.SA1601.severity = silent
-dotnet_diagnostic.SA1602.severity = silent
-dotnet_diagnostic.SA1600.severity = silent
-csharp_space_between_method_declaration_parameter_list_parentheses = true
-csharp_space_around_binary_operators = before_and_after
-csharp_space_between_method_call_name_and_opening_parenthesis = true
-csharp_style_throw_expression = true:suggestion
-csharp_style_prefer_null_check_over_type_check = true:suggestion
-csharp_prefer_simple_default_expression = true:suggestion
-csharp_style_prefer_local_over_anonymous_function = true:suggestion
-csharp_style_prefer_range_operator = true:suggestion
-csharp_style_prefer_index_operator = true:suggestion
-csharp_style_prefer_tuple_swap = true:suggestion
-csharp_style_implicit_object_creation_when_type_is_apparent = true:suggestion
-csharp_style_inlined_variable_declaration = true:suggestion
-csharp_style_prefer_utf8_string_literals = true:suggestion
-csharp_style_deconstructed_variable_declaration = true:suggestion
-csharp_style_unused_value_expression_statement_preference = discard_variable:silent
-csharp_prefer_static_local_function = true:suggestion
-csharp_style_allow_blank_lines_between_consecutive_braces_experimental = true:silent
-csharp_style_allow_embedded_statements_on_same_line_experimental = true:silent
-csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimental = true:silent
-csharp_style_conditional_delegate_call = true:suggestion
-csharp_style_prefer_pattern_matching = true:silent
-csharp_style_prefer_switch_expression = true:suggestion
-csharp_style_pattern_matching_over_is_with_cast_check = true:suggestion
-csharp_style_pattern_matching_over_as_with_null_check = true:suggestion
-csharp_style_prefer_not_pattern = true:suggestion
-csharp_style_prefer_extended_property_pattern = true:suggestion
-csharp_style_var_for_built_in_types = false:silent
-csharp_style_var_when_type_is_apparent = false:silent
-csharp_style_var_elsewhere = false:silent
-
-dotnet_diagnostic.CS0219.severity = error
-dotnet_diagnostic.CS8321.severity = error
-dotnet_diagnostic.CS0169.severity = error
-dotnet_diagnostic.CS0414.severity = error
-
-dotnet_diagnostic.S1481.severity = error
-dotnet_diagnostic.S2699.severity = error
-dotnet_diagnostic.S1163.severity = error
-dotnet_diagnostic.S1186.severity = error
-dotnet_diagnostic.S1994.severity = error
-dotnet_diagnostic.S1067.severity = error
-dotnet_diagnostic.S1006.severity = error
-dotnet_diagnostic.S121.severity = error
-dotnet_diagnostic.S131.severity = error
-dotnet_diagnostic.S134.severity = error
-dotnet_diagnostic.S1541.severity = error
-dotnet_diagnostic.S1821.severity = error
-dotnet_diagnostic.S1944.severity = error
-dotnet_diagnostic.S2223.severity = error
-dotnet_diagnostic.S3776.severity = error
-dotnet_diagnostic.S3871.severity = error
-dotnet_diagnostic.S3972.severity = error
-dotnet_diagnostic.S3973.severity = error
-dotnet_diagnostic.S4487.severity = error
-dotnet_diagnostic.S927.severity = error
-dotnet_diagnostic.S3168.severity = error
-dotnet_diagnostic.S103.severity = error
-dotnet_diagnostic.S107.severity = error
-dotnet_diagnostic.S108.severity = error
-dotnet_diagnostic.S109.severity = error
-dotnet_diagnostic.S1110.severity = error
-dotnet_diagnostic.S1123.severity = error
-dotnet_diagnostic.S1144.severity = error
-dotnet_diagnostic.S1172.severity = error
-dotnet_diagnostic.S122.severity = error
-dotnet_diagnostic.S1854.severity = error
-dotnet_diagnostic.S1871.severity = error
-dotnet_diagnostic.S2357.severity = error
-dotnet_diagnostic.S2326.severity = error
-dotnet_diagnostic.S2681.severity = error
-dotnet_diagnostic.S2933.severity = error
-dotnet_diagnostic.S3358.severity = error
-dotnet_diagnostic.S3898.severity = error
-dotnet_diagnostic.S4035.severity = error
-dotnet_diagnostic.S4144.severity = error
-dotnet_diagnostic.S4581.severity = error
-dotnet_diagnostic.S100.severity = error
-dotnet_diagnostic.S101.severity = error
-dotnet_diagnostic.S1075.severity = error
-dotnet_diagnostic.S1104.severity = error
-dotnet_diagnostic.S1109.severity = error
-dotnet_diagnostic.S1116.severity = error
-dotnet_diagnostic.S1125.severity = error
-dotnet_diagnostic.S1128.severity = error
-dotnet_diagnostic.S1155.severity = error
-dotnet_diagnostic.S1450.severity = error
-dotnet_diagnostic.S1643.severity = error
-dotnet_diagnostic.S1659.severity = error
-dotnet_diagnostic.S2156.severity = error
-dotnet_diagnostic.S2737.severity = error
-dotnet_diagnostic.S3235.severity = error
-dotnet_diagnostic.S3240.severity = error
-dotnet_diagnostic.S3256.severity = error
-dotnet_diagnostic.S4225.severity = error
