[Stylecop] - Readability rules

--- a/lints/csharp/.editorconfig
+++ b/lints/csharp/.editorconfig
@@ -157,3 +157,42 @@ dotnet_diagnostic.SA1213.severity = error
 dotnet_diagnostic.SA1214.severity = error
 dotnet_diagnostic.SA1216.severity = error
 dotnet_diagnostic.SA1217.severity = error
+
+#   Readability rules
+dotnet_diagnostic.SA1100.severity = error
+dotnet_diagnostic.SA1101.severity = silent
+dotnet_diagnostic.SA1102.severity = error
+dotnet_diagnostic.SA1103.severity = error
+dotnet_diagnostic.SA1104.severity = error
+dotnet_diagnostic.SA1105.severity = error
+dotnet_diagnostic.SA1106.severity = error
+dotnet_diagnostic.SA1107.severity = error
+dotnet_diagnostic.SA1108.severity = error
+dotnet_diagnostic.SA1110.severity = error
+dotnet_diagnostic.SA1111.severity = error
+dotnet_diagnostic.SA1112.severity = error
+dotnet_diagnostic.SA1113.severity = error
+dotnet_diagnostic.SA1114.severity = error
+dotnet_diagnostic.SA1115.severity = error
+dotnet_diagnostic.SA1116.severity = error
+dotnet_diagnostic.SA1117.severity = error
+dotnet_diagnostic.SA1118.severity = error
+dotnet_diagnostic.SA1120.severity = error
+dotnet_diagnostic.SA1121.severity = error
+dotnet_diagnostic.SA1122.severity = error
+dotnet_diagnostic.SA1123.severity = error
+dotnet_diagnostic.SA1124.severity = silent
+dotnet_diagnostic.SA1125.severity = error
+dotnet_diagnostic.SA1127.severity = error
+dotnet_diagnostic.SA1128.severity = error
+dotnet_diagnostic.SA1129.severity = error
+dotnet_diagnostic.SA1130.severity = error
+dotnet_diagnostic.SA1131.severity = error
+dotnet_diagnostic.SA1132.severity = error
+dotnet_diagnostic.SA1133.severity = error
+dotnet_diagnostic.SA1134.severity = error
+dotnet_diagnostic.SA1135.severity = silent
+dotnet_diagnostic.SA1137.severity = error
+dotnet_diagnostic.SA1136.severity = error
+dotnet_diagnostic.SA1139.severity = error
+dotnet_diagnostic.SX1101.severity = error
