--- a/lints/csharp/.editorconfig
+++ b/lints/csharp/.editorconfig
@@ -65,6 +65,12 @@ dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
 dotnet_style_prefer_compound_assignment = true:suggestion
 dotnet_style_prefer_simplified_interpolation = true:suggestion
 dotnet_style_namespace_match_folder = true:suggestion
+dotnet_diagnostic.CA1707.severity = error
+dotnet_diagnostic.CA1501.severity = error
+dotnet_diagnostic.CA1502.severity = error
+dotnet_diagnostic.CA1505.severity = error
+dotnet_diagnostic.CA1506.severity = error
+dotnet_diagnostic.CA1508.severity = error
 
 [*.cs]
 csharp_indent_labels = one_less_than_current
@@ -271,3 +277,189 @@ dotnet_diagnostic.SA1643.severity = error
 dotnet_diagnostic.SA1648.severity = error
 dotnet_diagnostic.SA1649.severity = error
 dotnet_diagnostic.SA1651.severity = silent
+#
+
+# SonarLint
+dotnet_diagnostic.S100.severity = error
+dotnet_diagnostic.S101.severity = error
+dotnet_diagnostic.S1104.severity = error
+dotnet_diagnostic.S1128.severity = error
+dotnet_diagnostic.S1155.severity = error
+dotnet_diagnostic.S1116.severity = error
+dotnet_diagnostic.S1125.severity = error
+dotnet_diagnostic.S1192.severity = error
+dotnet_diagnostic.S1199.severity = error
+dotnet_diagnostic.S1264.severity = error
+dotnet_diagnostic.S1449.severity = silent
+dotnet_diagnostic.S1481.severity = error
+dotnet_diagnostic.S1659.severity = error
+dotnet_diagnostic.S1858.severity = error
+dotnet_diagnostic.S1905.severity = error
+dotnet_diagnostic.S2094.severity = error
+dotnet_diagnostic.S1940.severity = error
+dotnet_diagnostic.S2221.severity = silent
+dotnet_diagnostic.S2148.severity = error
+dotnet_diagnostic.S2325.severity = error
+dotnet_diagnostic.S2333.severity = error
+dotnet_diagnostic.S3235.severity = error
+dotnet_diagnostic.S3256.severity = error
+dotnet_diagnostic.S3261.severity = error
+dotnet_diagnostic.S3459.severity = error
+dotnet_diagnostic.S3532.severity = error
+dotnet_diagnostic.S3717.severity = error
+dotnet_diagnostic.S3872.severity = error
+dotnet_diagnostic.S4023.severity = silent
+dotnet_diagnostic.S4136.severity = error
+dotnet_diagnostic.S4061.severity = error
+dotnet_diagnostic.S4225.severity = error
+dotnet_diagnostic.S4226.severity = error
+dotnet_diagnostic.S4663.severity = error
+dotnet_diagnostic.S6513.severity = error
+dotnet_diagnostic.S2857.severity = error
+dotnet_diagnostic.S2178.severity = error
+dotnet_diagnostic.S2306.severity = error
+dotnet_diagnostic.S1147.severity = warning
+dotnet_diagnostic.S1451.severity = silent
+dotnet_diagnostic.S2187.severity = silent
+dotnet_diagnostic.S2368.severity = silent
+dotnet_diagnostic.S2437.severity = warning
+dotnet_diagnostic.S2699.severity = error
+dotnet_diagnostic.S2970.severity = error
+dotnet_diagnostic.S3060.severity = silent
+dotnet_diagnostic.S3237.severity = warning
+dotnet_diagnostic.S3427.severity = error
+dotnet_diagnostic.S3433.severity = error
+dotnet_diagnostic.S3443.severity = error
+dotnet_diagnostic.S3877.severity = error
+dotnet_diagnostic.S4462.severity = error
+dotnet_diagnostic.S6422.severity = silent
+dotnet_diagnostic.S6424.severity = silent
+dotnet_diagnostic.S2068.severity = error
+dotnet_diagnostic.S2115.severity = silent
+dotnet_diagnostic.S2755.severity = silent
+dotnet_diagnostic.S3884.severity = silent
+dotnet_diagnostic.S1067.severity = error
+dotnet_diagnostic.S1006.severity = error
+dotnet_diagnostic.S1163.severity = error
+dotnet_diagnostic.S1186.severity = error
+dotnet_diagnostic.S1215.severity = silent
+dotnet_diagnostic.S126.severity = suggestion
+dotnet_diagnostic.S121.severity = error
+dotnet_diagnostic.S131.severity = error
+dotnet_diagnostic.S134.severity = error
+dotnet_diagnostic.S1541.severity = error
+dotnet_diagnostic.S1821.severity = error
+dotnet_diagnostic.S1944.severity = error
+dotnet_diagnostic.S1994.severity = error
+dotnet_diagnostic.S2197.severity = error
+dotnet_diagnostic.S2198.severity = error
+dotnet_diagnostic.S2223.severity = error
+dotnet_diagnostic.S2302.severity = error
+dotnet_diagnostic.S2330.severity = error
+dotnet_diagnostic.S2339.severity = error
+dotnet_diagnostic.S2346.severity = error
+dotnet_diagnostic.S2360.severity = silent
+dotnet_diagnostic.S2365.severity = error
+dotnet_diagnostic.S2479.severity = error
+dotnet_diagnostic.S2692.severity = error
+dotnet_diagnostic.S2696.severity = error
+dotnet_diagnostic.S2701.severity = error
+dotnet_diagnostic.S3216.severity = silent
+dotnet_diagnostic.S3215.severity = error
+dotnet_diagnostic.S3353.severity = error
+dotnet_diagnostic.S3776.severity = error
+dotnet_diagnostic.S3871.severity = error
+dotnet_diagnostic.S3447.severity = error
+dotnet_diagnostic.S3451.severity = error
+dotnet_diagnostic.S3600.severity = error
+dotnet_diagnostic.S3874.severity = error
+dotnet_diagnostic.S3904.severity = warning
+dotnet_diagnostic.S3937.severity = error
+dotnet_diagnostic.S3972.severity = error
+dotnet_diagnostic.S3973.severity = error
+dotnet_diagnostic.S4487.severity = error
+dotnet_diagnostic.S4524.severity = error
+dotnet_diagnostic.S5034.severity = error
+dotnet_diagnostic.S927.severity = error
+dotnet_diagnostic.CA1507.severity = error
+dotnet_diagnostic.S1244.severity = error
+dotnet_diagnostic.S1656.severity = error
+dotnet_diagnostic.S1751.severity = error
+dotnet_diagnostic.S1764.severity = error
+dotnet_diagnostic.S1848.severity = error
+dotnet_diagnostic.S1862.severity = error
+dotnet_diagnostic.S2114.severity = error
+dotnet_diagnostic.S2123.severity = error
+dotnet_diagnostic.S2201.severity = error
+dotnet_diagnostic.S2225.severity = error
+dotnet_diagnostic.S2251.severity = error
+dotnet_diagnostic.S2252.severity = error
+dotnet_diagnostic.S2259.severity = error
+dotnet_diagnostic.S2583.severity = error
+dotnet_diagnostic.S2688.severity = error
+dotnet_diagnostic.S3168.severity = error
+dotnet_diagnostic.S3249.severity = error
+dotnet_diagnostic.S3263.severity = error
+dotnet_diagnostic.S3453.severity = error
+dotnet_diagnostic.S3466.severity = error
+dotnet_diagnostic.S3903.severity = error
+dotnet_diagnostic.S3923.severity = error
+dotnet_diagnostic.S3981.severity = error
+dotnet_diagnostic.S3984.severity = error
+dotnet_diagnostic.S103.severity = error
+dotnet_diagnostic.S104.severity = error
+dotnet_diagnostic.S106.severity = error
+dotnet_diagnostic.S1066.severity = error
+dotnet_diagnostic.S107.severity = error
+dotnet_diagnostic.S108.severity = error
+dotnet_diagnostic.S109.severity = error
+dotnet_diagnostic.S110.severity = error
+dotnet_diagnostic.S1110.severity = error
+dotnet_diagnostic.S1117.severity = error
+dotnet_diagnostic.S1118.severity = error
+dotnet_diagnostic.S112.severity = error
+dotnet_diagnostic.S1121.severity = error
+dotnet_diagnostic.S1123.severity = error
+dotnet_diagnostic.S1144.severity = error
+dotnet_diagnostic.S1151.severity = error
+dotnet_diagnostic.S1172.severity = error
+dotnet_diagnostic.S1200.severity = error
+dotnet_diagnostic.S122.severity = error
+dotnet_diagnostic.S125.severity = error
+dotnet_diagnostic.S127.severity = error
+dotnet_diagnostic.S138.severity = error
+dotnet_diagnostic.S1479.severity = error
+dotnet_diagnostic.S1607.severity = error
+dotnet_diagnostic.S1854.severity = error
+dotnet_diagnostic.S1871.severity = error
+dotnet_diagnostic.S2234.severity = error
+dotnet_diagnostic.S2326.severity = error
+dotnet_diagnostic.S2327.severity = error
+dotnet_diagnostic.S2357.severity = error
+dotnet_diagnostic.S2372.severity = error
+dotnet_diagnostic.S2589.severity = error
+dotnet_diagnostic.S2681.severity = error
+dotnet_diagnostic.S2933.severity = error
+dotnet_diagnostic.S3010.severity = error
+dotnet_diagnostic.S3011.severity = error
+dotnet_diagnostic.S3059.severity = error
+dotnet_diagnostic.S3063.severity = error
+dotnet_diagnostic.S3169.severity = error
+dotnet_diagnostic.S3262.severity = error
+dotnet_diagnostic.S3358.severity = error
+dotnet_diagnostic.S3442.severity = error
+dotnet_diagnostic.S3445.severity = error
+dotnet_diagnostic.S4004.severity = error
+dotnet_diagnostic.S4581.severity = error
+dotnet_diagnostic.S6354.severity = error
+dotnet_diagnostic.S907.severity = error
+dotnet_diagnostic.S6423.severity = silent
+dotnet_diagnostic.S6421.severity = silent
+dotnet_diagnostic.S6420.severity = silent
+dotnet_diagnostic.S6419.severity = silent
+dotnet_diagnostic.S881.severity = error
+dotnet_diagnostic.S1048.severity = error
+dotnet_diagnostic.S2190.severity = error
+dotnet_diagnostic.S2930.severity = error
+dotnet_diagnostic.S2931.severity = error
+dotnet_diagnostic.S3464.severity = error
