--- a/lints/csharp/Directory.Packages.props
+++ b/lints/csharp/Directory.Packages.props
@@ -2,5 +2,6 @@
   <ItemGroup>
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="8.55.0.65544" />
+    <PackageReference Include="AspNetCoreAnalyzers" Version="0.3.0" />
   </ItemGroup>
 </Project>
