--- a/lints/csharp/Directory.Packages.props
+++ b/lints/csharp/Directory.Packages.props
@@ -3,5 +3,7 @@
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="8.55.0.65544" />
     <PackageReference Include="AspNetCoreAnalyzers" Version="0.3.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.5.22" />
+    <PackageReference Include="xunit.analyzers" Version="1.1.0" />
   </ItemGroup>
 </Project>
