--- a/lints/csharp/.editorconfig
+++ b/lints/csharp/.editorconfig
@@ -227,38 +227,40 @@ csharp_style_prefer_readonly_struct_member = true:suggestion
     dotnet_diagnostic.SA1217.severity = silent
 
     # Readability rules
-    dotnet_diagnostic.SA1100.severity = suggestion
-    dotnet_diagnostic.SA1101.severity = silent
+    dotnet_diagnostic.SA1100.severity = error
+    dotnet_diagnostic.SA1101.severity = none
     dotnet_diagnostic.SA1106.severity = error
     dotnet_diagnostic.SA1107.severity = error
-    dotnet_diagnostic.SA1108.severity = error
+    dotnet_diagnostic.SA1108.severity = none
     dotnet_diagnostic.SA1110.severity = error
-    dotnet_diagnostic.SA1111.severity = error
-    dotnet_diagnostic.SA1112.severity = silent
+    dotnet_diagnostic.SA1111.severity = none
+    dotnet_diagnostic.SA1112.severity = none
     dotnet_diagnostic.SA1113.severity = error
-    dotnet_diagnostic.SA1114.severity = error
+    dotnet_diagnostic.SA1114.severity = none
     dotnet_diagnostic.SA1115.severity = error
     dotnet_diagnostic.SA1116.severity = error
     dotnet_diagnostic.SA1117.severity = error
     dotnet_diagnostic.SA1118.severity = error
-    dotnet_diagnostic.SA1120.severity = error
+    dotnet_diagnostic.SA1120.severity = none
     dotnet_diagnostic.SA1121.severity = error
     dotnet_diagnostic.SA1122.severity = error
-    dotnet_diagnostic.SA1123.severity = error
-    dotnet_diagnostic.SA1124.severity = error
+    dotnet_diagnostic.SA1123.severity = none
+    dotnet_diagnostic.SA1124.severity = none
     dotnet_diagnostic.SA1125.severity = error
     dotnet_diagnostic.SA1127.severity = error
     dotnet_diagnostic.SA1128.severity = error
     dotnet_diagnostic.SA1129.severity = suggestion
     dotnet_diagnostic.SA1130.severity = error
-    dotnet_diagnostic.SA1131.severity = error
-    dotnet_diagnostic.SA1132.severity = suggestion
+    dotnet_diagnostic.SA1131.severity = suggestion
+    dotnet_diagnostic.SA1132.severity = error
     dotnet_diagnostic.SA1133.severity = error
     dotnet_diagnostic.SA1134.severity = error
-    dotnet_diagnostic.SA1135.severity = silent
+    dotnet_diagnostic.SA1135.severity = none
     dotnet_diagnostic.SA1136.severity = error
     dotnet_diagnostic.SA1137.severity = error
     dotnet_diagnostic.SA1139.severity = suggestion
+    dotnet_diagnostic.SA1141.severity = error
+    dotnet_diagnostic.SA1142.severity = error
     dotnet_diagnostic.SA1413.severity = suggestion
     dotnet_diagnostic.SX1101.severity = error
 
@@ -267,26 +269,26 @@ csharp_style_prefer_readonly_struct_member = true:suggestion
     dotnet_diagnostic.SA1001.severity = error
     dotnet_diagnostic.SA1002.severity = error
     dotnet_diagnostic.SA1003.severity = error
-    dotnet_diagnostic.SA1004.severity = silent
-    dotnet_diagnostic.SA1005.severity = silent
-    dotnet_diagnostic.SA1006.severity = silent
-    dotnet_diagnostic.SA1007.severity = error
+    dotnet_diagnostic.SA1004.severity = none
+    dotnet_diagnostic.SA1005.severity = none
+    dotnet_diagnostic.SA1006.severity = none
+    dotnet_diagnostic.SA1007.severity = none
     dotnet_diagnostic.SA1008.severity = error
     dotnet_diagnostic.SA1009.severity = error
     dotnet_diagnostic.SA1010.severity = error
     dotnet_diagnostic.SA1011.severity = error
     dotnet_diagnostic.SA1012.severity = error
     dotnet_diagnostic.SA1013.severity = error
-    dotnet_diagnostic.SA1021.severity = error
-    dotnet_diagnostic.SA1022.severity = error
-    dotnet_diagnostic.SA1024.severity = error
-    dotnet_diagnostic.SA1025.severity = error
-    dotnet_diagnostic.SA1027.severity = error
-    dotnet_diagnostic.SA1028.severity = error
     dotnet_diagnostic.SA1016.severity = error
     dotnet_diagnostic.SA1017.severity = error
     dotnet_diagnostic.SA1018.severity = error
     dotnet_diagnostic.SA1019.severity = error
+    dotnet_diagnostic.SA1021.severity = none
+    dotnet_diagnostic.SA1022.severity = none
+    dotnet_diagnostic.SA1024.severity = error
+    dotnet_diagnostic.SA1025.severity = error
+    dotnet_diagnostic.SA1027.severity = error
+    dotnet_diagnostic.SA1028.severity = error
 #
 
 # SonarLint
